[tool.poetry]
name = "drone-stats"
version = "0.1.0"
description = "Collect and compute statistics related to your Drone CI builds"
authors = ["Tom Rochette <tom@tomrochette.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
isort = "^4.3"
prospector = "^1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
